# low-effort-transcribe

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: audio.rs  lib.rs  model.rs  runner.rs
